--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.3
   location: ^6.0.1
+  geobase: ^1.3.0
 
 dependency_overrides:
   flutter_map_cancellable_tile_provider:  ^2.0.0
